fixed wrong font folder names

--- a/src/css/inc/typography.css
+++ b/src/css/inc/typography.css
@@ -1,22 +1,22 @@
 
 @font-face {
    font-family: 'latoregular';
-   src: url('../fonts/lato/lato-regular-webfont.woff2') format('woff2'),
-        url('../fonts/lato/lato-regular-webfont.woff') format('woff');
+   src: url('../fonts/Lato/lato-regular-webfont.woff2') format('woff2'),
+        url('../fonts/Lato/lato-regular-webfont.woff') format('woff');
    font-weight: normal;
    font-style: normal;
 }
 @font-face {
    font-family: 'latolight';
-   src: url('../fonts/lato/lato-light-webfont.woff2') format('woff2'),
-        url('../fonts/lato/lato-light-webfont.woff') format('woff');
+   src: url('../fonts/Lato/lato-light-webfont.woff2') format('woff2'),
+        url('../fonts/Lato/lato-light-webfont.woff') format('woff');
    font-weight: normal;
    font-style: normal;
 }
 @font-face {
    font-family: 'latobold';
-   src: url('../fonts/lato/lato-bold-webfont.woff2') format('woff2'),
-        url('../fonts/lato/lato-bold-webfont.woff') format('woff');
+   src: url('../fonts/Lato/lato-bold-webfont.woff2') format('woff2'),
+        url('../fonts/Lato/lato-bold-webfont.woff') format('woff');
    font-weight: normal;
    font-style: normal;
 }
@@ -31,8 +31,8 @@
 
 @font-face {
     font-family: 'arvobold';
-    src: url('../fonts/arvo/arvo-bold-webfont.woff2') format('woff2'),
-         url('../fonts/arvo/arvo-bold-webfont.woff') format('woff');
+    src: url('../fonts/Arvo/arvo-bold-webfont.woff2') format('woff2'),
+         url('../fonts/Arvo/arvo-bold-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
